--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@types/react": "^18.0.25",
     "@types/react-lazy-load-image-component": "^1.5.2",
     "@types/react-redux": "^7.1.24",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-slick": "^0.23.10",
     "@types/stylis": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
